# alphadev

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  UPDATE_SUMMARY.md  VERIFICATION_CHECKLIST.md  pyproject.toml  requirements.txt
alphadev/: __init__.py  backtester.py
alphadev/alpha/: __init__.py  alpha.py  features.py  operators.py  universe.py
alphadev/analysis/: __init__.py  aggregate.py  ic_analyzer.py  rank_correlation.py
alphadev/core/: __init__.py  data_types.py  panel.py  utils.py
alphadev/data/: __init__.py  fetch_data.py  manager.py  publisher.py
alphadev/data/loaders/: __init__.py  agg_trade.py  alpha_loader.py  base.py  common_alphas_loader.py  composite.py  csv_loader.py  feature_loader.py  kline.py  universe_loader.py
alphadev/data/savers/: __init__.py  alpha_saver.py  base.py  feature_saver.py
alphadev/engine/: __init__.py  batch.py  runner.py  streaming.py
beta/: beta_batch.py  beta_regression.py  fetch_data.py
docs/: BACKTEST_UTILITY.md  CLASS_BASED_WORKFLOW.md  ERROR_REPORTING.md  MEMORY_OPTIMIZATION.md  MULTIPROCESSING.md  RESTRUCTURING.md  WORKFLOW_GUIDE.md
my_data/: asset_select.ipynb  download_data.py  download_data_new.py  fix_data.py  wrong_data_process.ipynb
tests/: lagged_momentum.py  test_alpha_rank_loader.py  test_backtest_alpha_rank_integration.py  test_rank_correlation.py
